--- a/settings.ini
+++ b/settings.ini
@@ -1,4 +1,19 @@
-[State]
-adapter=Serial
-host=192.168.0.62
-port=COM3
+[Init]
+adapter=Socket
+host=192.168.1.33
+port=80
+
+[WIFI]
+wifi=other
+ssid=best swamp
+pwd=Tankk34-9834jsdgh024375hkh
+
+[Config]
+gain=0
+
+[Measure]
+duration=60
+is_plot_data=true
+plot_window=200
+store_data=false
+rps=5
