--- a/settings.ini
+++ b/settings.ini
@@ -1,19 +1,19 @@
 [Init]
 adapter=Socket
-host=192.168.1.33
+host=192.168.0.62
 port=80
 
 [WIFI]
 wifi=other
-ssid=best swamp
-pwd=Tankk34-9834jsdgh024375hkh
+ssid=ASC_WiFi
+pwd=ran/fian/asc/2010
 
 [Config]
-gain=0
+gain=2
 
 [Measure]
-duration=60
+duration=6000
 is_plot_data=true
 plot_window=200
-store_data=false
-rps=5
+store_data=true
+rps=100
