--- a/settings.ini
+++ b/settings.ini
@@ -1,19 +1,19 @@
 [Init]
 adapter=Socket
-host=10.211.187.19
+host=192.168.4.1
 port=80
 
 [WIFI]
-wifi=other
-ssid=ASC_WiFi
-pwd=ran/fian/asc/2010
+wifi=own
+ssid=esp
+pwd=12345678
 
 [Config]
-gain=2
+gain=0
 
 [Measure]
-duration=6000
+duration=300
 is_plot_data=true
 plot_window=200
-store_data=true
-rps=100
+store_data=false
+rps=10
