--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-PyQt5==5.15.9
-PyQt5-sip==12.11.1
+PyQt5==5.15.11
+pyqt5-qt5==5.15.17
+PyQt5-sip==12.17.0
 pyqtgraph==0.13.7
 numpy==1.24.2
 PyOpenGL==3.1.5
