--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,13 +40,13 @@ jobs:
 
     - name: Archive Release Asset
       if: runner.os == 'Windows'
-      run: Compress-Archive -Path ./dist/Daq122 -DestinationPath ./dist/Daq122_${{ runner.os }}_${{ matrix.arch }}.zip
+      run: Compress-Archive -Path ./dist/EspAdc -DestinationPath ./dist/EspAdc_${{ runner.os }}_${{ matrix.arch }}.zip
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Daq122_${{ runner.os }}_${{ matrix.arch }}
-        path: ./dist/Daq122_${{ runner.os }}_${{ matrix.arch }}.zip
+        name: EspAdc_${{ runner.os }}_${{ matrix.arch }}
+        path: ./dist/EspAdc_${{ runner.os }}_${{ matrix.arch }}.zip
 
   release:
     needs: build
@@ -59,7 +59,7 @@ jobs:
     - name: Download Artifacts
       uses: actions/download-artifact@v4
       with:
-        name: Daq122_Windows_x86
+        name: EspAdc_Windows_x86
 
     - name: List contents
       run: ls -l .
@@ -69,4 +69,4 @@ jobs:
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: Daq122_Windows_x86.zip
+        files: EspAdc_Windows_x86.zip
